--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -438,7 +438,7 @@
                                     </div>
 
                                     <h2 class="fw-bold mt-2 mb-3"> Building<span class="text-primary"> Data Operating System</span><br> for DataDAOs. </h2>
-                                    <p class="para-desc text-muted">DataDAOstack is an open source data-first stack advancing the technology and adoption of decentralized data operating system: kenos.</p>
+                                    <p class="para-desc text-muted">The DataDAOs framework with security and flexibility at its core.</p>
                                     <div class="subcribe-form mt-4 pt-2">
                                         <form class="m-0">
                                             <div class="">
@@ -446,7 +446,7 @@
                                                 <a href="https://docs.kenos.io" target="_blank" class="btn btn-outline-primary"><i class="uil uil-book-alt"></i> Documentation</a>
                                             </div>
                                         </form><!--end form-->
-                                        <p class="text-muted mb-0 mt-3">Current Version: v0.0.1 <a href="javascript:void(0)" class="text-primary ms-2 h6 mb-0">Try it out <i data-feather="arrow-right" class="fea icon-sm"></i></a></p>
+                                        <p class="text-muted mb-0 mt-3">* DataDAOstack is an open source data-first stack advancing the technology and adoption of decentralized data operating system: kenos. <br> Current Version: v0.0.1 <a href="javascript:void(0)" class="text-primary ms-2 h6 mb-0">Try it out <i data-feather="arrow-right" class="fea icon-sm"></i></a></p>
                                     </div>
                                 </div>
                             </div><!--end col-->
