update the whykenos

--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -78,7 +78,7 @@
                         <a href="https://github.com/datadaostack/kenos" target="_blank" class="btn btn-icon btn-soft-primary"><i class="uil uil-github"></i></a>
                     </li>
                     <li class="list-inline-item button mb-0 ps-1">
-                        <a href="https://docs.kenos.io" target="_blank" class="btn btn-icon btn-primary" data-bs-toggle="modal" data-bs-target="#docsform"><i class="uil uil-book-alt"></i></a>
+                        <a href="https://docs.kenos.io" target="_blank" class="btn btn-icon btn-soft-primary" data-bs-toggle="modal" data-bs-target="#docsform"><i class="uil uil-book-alt"></i></a>
                     </li>
                 </ul><!--end login button-->
         
@@ -161,14 +161,12 @@
                         <div class="col-md-10">
                             <div class="section-title text-center text-md-start">
                                 <h4 class="fw-bold text-white title-dark mb-3">Why build Data Operating System on FVM?</h4>
-                                <p class="text-white-50 mb-0">The core elements of Web3 include: privacy and ownership, transparency, standards, composability, governance, and new business models. We’ve seen these fundamentals at work with the emergence of DeFi and NFTs.<br> A missing building block of Web3 is a strong <span class="text-light fw-bold">Data DAOs stack</span> to build <span class="text-light fw-bold">Data Operating System</span> - now made possible by Filecoin. The <span class="text-light fw-bold">Data DAOs stack</span> describes a Web3 ecosystem in which each stage of a piece of data’s lifecycle is permissionlessly, securely, and verifiably stored.</p>
+                                <p class="text-white-50 mb-0">A missing building block of Web3 is a strong <span class="text-light fw-bold">Data DAOs stack</span> to build <span class="text-light fw-bold">Data Operating System</span> - now made possible by Filecoin VM. The <span class="text-light fw-bold">Data DAOs stack</span> describes a Web3 ecosystem in which each stage of a piece of data’s lifecycle is permissionlessly, securely, and verifiably stored.</p>
                             </div>
                         </div><!--end col-->
 
                         <div class="col-md-2 mt-4 mt-sm-0">
-                            <div class="text-md-end ms-5 ms-sm-0">
-                                <a href="https://kenos.io" target="_blank" class="btn btn-warning">Learn More</a>
-                            </div>
+                            <img src="images/kenos/fvm-logo.png" class="rounded img-fluid mx-auto d-block" alt="" width="50%">
                         </div><!--end col-->
                     </div><!--end row-->
                 </div><!--end container-->
@@ -360,7 +358,7 @@
                         <div class="card work-process border-0 rounded shadow">
                             <div class="card-body">
                                 <h4 class="title">Build data supply chain</h4>
-                                <p class="text-muted para">A missing building block of Web3 is a strong data supply chain - now made possible by Filecoin. The DataDAOstack describes a Web3 ecosystem in which each stage of a piece of data’s lifecycle is permissionlessly, securely, and verifiably stored.</p>
+                                <p class="text-muted para">A missing building block of Web3 is a strong data supply chain - now made possible by Filecoin VM. The DataDAOstack describes a Web3 ecosystem in which each stage of a piece of data’s lifecycle is permissionlessly, securely, and verifiably stored.</p>
                                 <ul class="list-unstyled d-flex justify-content-between mb-0 mt-2">
                                     <li class="step h4 mb-0 fw-bold">kenos data plane</li>
                                 </ul>
