--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -477,7 +477,7 @@
                     <div class="row align-items-center">
                         <div class="col-sm-6">
                             <div class="text-sm-start">
-                                <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Kenos. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="https://shreethemes.in/" target="_blank" class="text-reset">KEN Labs</a>.</p>
+                                <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Kenos. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="https://kenlabs.org" target="_blank" class="text-reset">KEN Labs</a>.</p>
                             </div>
                         </div><!--end col-->
                     </div><!--end row-->
