update with new logo

--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -12,7 +12,7 @@
         <meta name="website" content="https://kenos.io" />
         <meta name="Version" content="v1.0.0" />
         <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="images/kenos-blue.ico">
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <!-- Icons -->
@@ -43,8 +43,8 @@
             <div class="container">
                 <!-- Logo container-->
                 <a class="logo" href="index.html">
-                    <img src="images/kenos-words.png" height="48" class="logo-light-mode" alt="">
-                    <img src="images/kenos-words.png" height="48" class="logo-dark-mode" alt="">
+                    <img src="images/kenos-words.png" height="56" class="logo-light-mode" alt="">
+                    <img src="images/kenos-words.png" height="56" class="logo-dark-mode" alt="">
                 </a>
                 
                 <div class="menu-extras">
@@ -227,7 +227,7 @@
             <div class="container mt-100 mt-60" id="kenos">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
-                        <img src="images/kenos/kenos.png" class="img-fluid rounded" alt="">
+                        <img src="images/kenos/kenos-arch.png" class="img-fluid rounded" alt="">
                     </div><!--end col-->
 
                     <div class="col-lg-6 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
@@ -427,7 +427,7 @@
                             <div class="row">
                                 <div class="col-lg-4 col-12 mb-0 mb-md-4 pb-0 pb-md-2">
                                     <a href="#" class="logo-footer">
-                                        <img src="images/kenos-words-light.png" height="48" alt="">
+                                        <img src="images/kenos-words-light.png" height="60" alt="">
                                     </a>
                                     <p class="mt-4">Kenos is a Web3 Data Operating System for Data DAOs.</p>
                                     <ul class="list-unstyled social-icon foot-social-icon mb-0 mt-4">
@@ -464,7 +464,7 @@
                                     </ul>
                                     <small class="d-block">Are you developer ? <a href="#" class="text-foot fw-medium">Learn More <i class="uil uil-arrow-right"></i></a></small>
 
-                                    <img src="images/kenos.png" class="avatar avatar-small mt-4" alt="">
+                                    <!--img src="images/kenos-blue.ico" class="avatar avatar-small mt-4" alt=""-->
                                 </div><!--end col-->
                             </div><!--end row-->
                         </div>
