--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -44,7 +44,7 @@
                 <!-- Logo container-->
                 <a class="logo" href="index.html">
                     <img src="images/kenos-words.png" height="48" class="logo-light-mode" alt="">
-                    <img src="images/kenos-words.png" height="48    " class="logo-dark-mode" alt="">
+                    <img src="images/kenos-words.png" height="48" class="logo-dark-mode" alt="">
                 </a>
                 
                 <div class="menu-extras">
@@ -175,8 +175,73 @@
         <!-- Focus End -->
 
         <!-- Start -->
-        <section class="section" id="datadaostack">
+        <section class="section" id="kenosdetail">
             <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center">
+                        <div class="section-title mb-4 pb-2">
+                            <h4 class="title mb-4">Why Kenos?</h4>
+                            <p class="text-muted para-desc mb-0 mx-auto"><span class="text-primary fw-bold">Kenos</span> combines Filecoin with other Web3 technology to enable Data DAOs to easily form and manage their data from conception to deployment. It ties together Filecoin data storage, IPLD Prolly Tree data indexing and search, FVM data processing, Solidity smart contracts into a cohesive Operating System..</p>
+                        </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+
+                <div class="row">
+                    <div class="col-12 mt-4 pt-2">
+                        <img src="images/whykenos.png" class="img-fluid mx-auto d-block" alt="">
+                    </div><!--end col-->
+
+                    <div class="col-md-4 col-12 mt-4">
+                        <div class="card border-0 text-center features feature-primary feature-clean p-4">
+                            <div class="icons text-center mx-auto">
+                                <i class="uil uil-shield-check d-block rounded h3 mb-0"></i>
+                            </div>
+
+                            <div class="card-body p-0 mt-4">
+                                <h5>Filecoin data storage</h5>
+                                <p class="text-muted mb-0">Filecoin combines with IPFS, a peer-to-peer distributed network protocol, to make a more efficient and secure web free from corporate control. Content addressing and storage proofs verify data is being stored correctly and securely over time.</p>
+                                <div class="mt-2">
+                                    <a href="https://filecoin.io/store/#storage" class="read-more">Read More <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!--end col-->
+
+                    <div class="col-md-4 col-12 mt-4">
+                        <div class="card border-0 text-center features feature-primary feature-clean p-4">
+                            <div class="icons text-center mx-auto">
+                                <i class="uil uil-newspaper d-block rounded h3 mb-0"></i>
+                            </div>
+
+                            <div class="card-body p-0 mt-4">
+                                <h5>IPLD Prolly Tree data indexing</h5>
+                                <p class="text-muted mb-0">Similar to B+ Trees, prolly trees store ordered key ranges in a tree structure. Unlike B+ Trees they use content addressibility and probibalistic chunking to determenistically generate the tree structure.</p>
+                                <div class="mt-2">
+                                    <a href="https://blog.mauve.moe/posts/peer-to-peer-databases" class="read-more">Read More <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!--end col-->
+
+                    <div class="col-md-4 col-12 mt-4">
+                        <div class="card border-0 text-center features feature-primary feature-clean p-4">
+                            <div class="icons text-center mx-auto">
+                                <i class="uil uil-browser d-block rounded h3 mb-0"></i>
+                            </div>
+
+                            <div class="card-body p-0 mt-4">
+                                <h5>FVM data processing</h5>
+                                <p class="text-muted mb-0">With the launch of Filecoin, we are seeing a very strong product-market for Data DAOs. Filecoin VM enables Data DAOs to execute complex operations on data stored on the Filecoin network, including processing, analysis, and retrieval.</p>
+                                <div class="mt-2">
+                                    <a href="https://docs.filecoin.io/smart-contracts/fundamentals/the-filecoin-virtual-machine/" class="read-more">Read More <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-->
+
+            <div class="container mt-100 mt-60" id="datadaostack">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <img src="images/kenos/datadaostack.png" class="img-fluid rounded" alt="" width="90%">
