fix minor typo error

--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -181,7 +181,7 @@
                     <div class="col-12 text-center">
                         <div class="section-title mb-4 pb-2">
                             <h4 class="title mb-4">Why Kenos?</h4>
-                            <p class="text-muted para-desc mb-0 mx-auto"><span class="text-primary fw-bold">Kenos</span> combines Filecoin with other Web3 technology to enable Data DAOs to easily form and manage their data from conception to deployment. It ties together Filecoin data storage, IPLD Prolly Tree data indexing and search, FVM data processing, Solidity smart contracts into a cohesive Operating System..</p>
+                            <p class="text-muted para-desc mb-0 mx-auto"><span class="text-primary fw-bold">Kenos</span> combines Filecoin with other Web3 technology to enable Data DAOs to easily form and manage their data from conception to deployment. It ties together Filecoin data storage, IPLD Prolly Tree data indexing and search, FVM data processing, Solidity smart contracts into a cohesive Operating System.</p>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
