--- a/HTML/landing/index.html
+++ b/HTML/landing/index.html
@@ -3,9 +3,9 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Kenos - Web3 Data Operating System for Data DAOs.</title>
+        <title>Kenos - Build Data Operating System for Web3 Data Economy.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Kenos is a Web3 Data Operating System for Data DAOs." />
+        <meta name="description" content="Kenos is a Data Operating System for Web3 Data Economy." />
         <meta name="keywords" content="Web3, Data Operating System, Data DAOs" />
         <meta name="author" content="kenos" />
         <meta name="email" content="support@kenos.io" />
@@ -123,7 +123,7 @@
                                         <span class="content"> Are you ready to build Data DAOs?</span>
                                     </div>
 
-                                    <h2 class="fw-bold mt-2 mb-3"> Building<span class="text-primary"> Data Operating System</span><br> for Data DAOs. </h2>
+                                    <h2 class="fw-bold mt-2 mb-3"> Building<span class="text-primary"> Data Operating System</span><br> for Web3 Data Economy. </h2>
                                     <p class="para-desc text-muted">The Data DAOs framework with security and flexibility at its core.</p>
                                     <div class="subcribe-form mt-4 pt-2">
                                         <form class="m-0">
@@ -181,7 +181,7 @@
                     <div class="col-8">
                         <div class="section-title mb-4 pb-2">
                             <h4 class="title mb-4">Why Kenos?</h4>
-                            <p class="text-muted"><span class="text-primary fw-bold">Kenos</span> combines Filecoin with other Web3 technology to enable Data DAOs to easily form and manage their data from conception to deployment. It ties together Filecoin data storage, IPLD Prolly Tree data indexing and search, FVM data processing, Solidity smart contracts into a cohesive Operating System.</p>
+                            <p class="text-muted"><span class="text-primary fw-bold">Kenos</span> combines Filecoin with other Web3 technology to enable Web3 Data Economy to easily form and manage their data from conception to deployment. It ties together Filecoin data storage, IPLD Prolly Tree data indexing and search, FVM data processing, Solidity smart contracts into a cohesive Operating System.</p>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -231,7 +231,7 @@
 
                             <div class="card-body p-0 mt-4">
                                 <h5>FVM data processing</h5>
-                                <p class="text-muted mb-0">With the launch of Filecoin, we are seeing a very strong product-market for Data DAOs. Filecoin VM enables Data DAOs to execute complex operations on data stored on the Filecoin network, including processing, analysis, and retrieval.</p>
+                                <p class="text-muted mb-0">With the launch of Filecoin, we are seeing a very strong product-market for Web3 Data Economy. Filecoin VM enables Web3 Data Economy to execute complex operations on data stored on the Filecoin network, including processing, analysis, and retrieval.</p>
                                 <div class="mt-2">
                                     <a href="https://docs.filecoin.io/smart-contracts/fundamentals/the-filecoin-virtual-machine/" class="read-more">Read More <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
                                 </div>
@@ -494,7 +494,7 @@
                                     <a href="#" class="logo-footer">
                                         <img src="images/kenos-words-light.png" height="60" alt="">
                                     </a>
-                                    <p class="mt-4">Kenos is a Web3 Data Operating System for Data DAOs.</p>
+                                    <p class="mt-4">Kenos is a Data Operating System for Web3 Data Economy.</p>
                                     <ul class="list-unstyled social-icon foot-social-icon mb-0 mt-4">
                                         <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="facebook" class="fea icon-sm fea-social"></i></a></li>
                                         <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i data-feather="instagram" class="fea icon-sm fea-social"></i></a></li>
